--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Git & GitHub Tutorial</title>
 </head>
 <body>
-    <h1>10 lệnh git cơ bản mà Developer nào cũng phải biết!</h1>
+    <h2>10 lệnh git cơ bản mà Developer nào cũng phải biết!</h2>
+    <p>Hướng dẫn chi tiết cách sử dụng Git và các lệnh cơ bản</p>
 </body>
 </html>
