--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h2>10 lệnh git cơ bản mà Developer nào cũng phải biết!</h2>
     <p>Hướng dẫn chi tiết cách sử dụng Git và các lệnh cơ bản</p>
+    <span class="">Test status git</span>
 </body>
 </html>
